# aoc2025

./: .gitignore  Cargo.toml  fetch_input
src/: lib.rs
