[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
good_lp = { version = "1.14.2", default-features = false, features = [
  "microlp",
] }
itertools = "0.14.0"

[lib]
name = "aoc"
path = "src/lib.rs"

# Binary entries for each day
[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"

[[bin]]
name = "day07"
path = "src/bin/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08.rs"

[[bin]]
name = "day09"
path = "src/bin/day09.rs"

[[bin]]
name = "day10"
path = "src/bin/day10.rs"

[[bin]]
name = "day11"
path = "src/bin/day11.rs"

[[bin]]
name = "day12"
path = "src/bin/day12.rs"
